[package]
name = "priouser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
cmac = "0.7.1"
ctr = "0.9.1"
hex = { version = "0.4.3", features = ["serde"] }
prio = { version = "0.8.2", default-features = false }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"

[patch.crates-io]
prio = { path = "../libprio-rs" }
